@@ -174,30 +174,3 @@ Description: Python 2.x bindings for GObject - transitional package
  deprecated gobject module, and the new gobject-introspection system. It 
  is here for upgrade purposes only. You can remove it safely when 
  nothing else depends on it.
-
-Package: python-gobject-dbg
-Section: oldlibs
-Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends},
-         python-gi-dbg (>= ${source:Version}),
-         python-gobject-2-dbg
-Description: Python 2.x debugging modules for GObject - transitional package 
- This package will bring the two debugging versions of GObject Python 
- modules: one for the deprecated gobject module, and one for the new 
- gobject-introspection system. It is here for upgrade purposes only. 
- You can remove it safely when nothing else depends on it.
-
-Package: python-gobject-dev
-Section: oldlibs
-Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends},
-         python-gi-dev (>= ${source:Version}),
-         python-gi-dev (<< ${source:Version}.1~),
-         python-gobject-2-dev
-Description: Python 2.x development headers for GObject - transitional package 
- This package will bring development headers for the two versions of 
- GObject Python modules: the deprecated gobject module, and the new 
- gobject-introspection system. It is here for upgrade purposes only. You 
- can remove it safely when nothing else depends on it. 
